# Foundation-of-Computer-Graphics

./: README.md
FCG_Homework2/: readme_1938388.html
FCG_Homework2/scripts/: run-highres.sh  run.sh  sync_yocto.sh
FCG_Homework2/tests/scene_project0/: scene0.json
FCG_Homework2/tests/scene_project0/shapes/: bicchiere__.ply  bicchierealto__.ply  bottiglia__.ply  cucchiaio__.ply  piattopiano__.ply  sedia__.ply  tavolo__.ply  tovaglioli1__.ply
FCG_Homework2/tests/scene_project1/: scene1.json
FCG_Homework2/tests/scene_project1/shapes/: albero__.ply  portacenere__.ply  sedia__.ply  sphere__.ply  tavolo__.ply
FCG_Homework2/tests/scene_project2/: scene2.json
FCG_Homework2/tests/scene_project3/: scene3.json
FCG_Homework2/tests/scene_project4/: scene4.json
FCG_Homework2/tests/scene_project4/shapes/: cerchioni.ply  fanali.ply  luci.ply  partenera.ply  regali.ply  tree.ply  vetrodavanti.ply
FCG_Homework2/yocto_pathtrace/: yocto_pathtrace.cpp  yocto_pathtrace.h
FCG_Homework3/apps/: CMakeLists.txt
FCG_Homework3/apps/ypathtrace/: ypathtrace.cpp
FCG_Homework3/apps/ypathtrace_adaptive/: CMakeLists.txt  ypathtrace_adaptive.cpp
FCG_Homework3/scripts/: run.sh
FCG_Homework3/yocto_pathtrace/: yocto_pathtrace.cpp  yocto_pathtrace.h
